# candle-dvm

./: .gitignore  LICENSE  pyproject.toml  setup.py
candle_dvm/: __init__.py  _acl.pxd  _rt.pxd  api.pyx  code.pxd  code.pyx  device_bin.pyx  isa.pxd  isa.pyx  kernel.pxd  kernel.pyx  ops.pxd  ops.pyx  pass_.pyx  pykernel.py  system.pxd  system.pyx  tuning.pyx  xkernel.pyx
candle_dvm/data/: README.md
docs/superpowers/plans/: 2026-03-24-candle-dvm-phase1.md  2026-03-25-candle-dvm-batch-ab-plan.md  2026-03-25-candle-dvm-batch-c-plan.md  2026-03-26-candle-dvm-batch-d-compare-plan.md
docs/superpowers/specs/: 2026-03-24-candle-dvm-design.md  2026-03-26-candle-dvm-batch-d-compare-design.md
examples/: 01_add.py
scripts/: capture_upstream_add_trace.py
tests/: conftest.py  test_add.py  test_api.py  test_binary_resources.py  test_code.py  test_import.py  test_isa.py  test_kernel.py  test_ops.py  test_system.py  test_trace_fixture.py
tests/fixtures/: README.md  upstream_add_trace.txt
