[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "candle-dvm"
version = "0.1.0"
requires-python = ">=3.11"
description = "Candle DVM - Cython runtime bindings"
dependencies = ["numpy>=1.24,<2"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
